language/move-lang/tests/move_check/typing/if_branches_subtype_invalid.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:3:16
  │
2 │     fun t0(cond: bool, u: &u64, u_mut: &mut u64) {
  │                           ---- Given: '&u64'
3 │         let _: &mut u64 = if (cond) u else u_mut;
  │                ^^^^^^^^
  │                │
  │                Invalid type annotation
  │                Expected: '&mut u64'

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:4:16
  │
2 │     fun t0(cond: bool, u: &u64, u_mut: &mut u64) {
  │                           ---- Given: '&u64'
3 │         let _: &mut u64 = if (cond) u else u_mut;
4 │         let _: &mut u64 = if (cond) u_mut else u;
  │                ^^^^^^^^
  │                │
  │                Invalid type annotation
  │                Expected: '&mut u64'

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:5:16
  │
2 │     fun t0(cond: bool, u: &u64, u_mut: &mut u64) {
  │                           ---- Given: '&u64'
  ·
5 │         let _: &mut u64 = if (cond) u else u;
  │                ^^^^^^^^
  │                │
  │                Invalid type annotation
  │                Expected: '&mut u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:9:23
  │
8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
  │                            ---                       ---- Found: 'bool'. It is not compatible with the other type.
  │                            │                          
  │                            Found: 'u64'. It is not compatible with the other type.
9 │         let _: &u64 = if (cond) u else b;
  │                       ^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:10:23
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                            ---                       ---- Found: 'bool'. It is not compatible with the other type.
   │                            │                          
   │                            Found: 'u64'. It is not compatible with the other type.
 9 │         let _: &u64 = if (cond) u else b;
10 │         let _: &u64 = if (cond) b else u;
   │                       ^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:12:23
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                                             ---      ---- Found: 'bool'. It is not compatible with the other type.
   │                                             │         
   │                                             Found: 'u64'. It is not compatible with the other type.
   ·
12 │         let _: &u64 = if (cond) u_mut else b;
   │                       ^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:13:23
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                                             ---      ---- Found: 'bool'. It is not compatible with the other type.
   │                                             │         
   │                                             Found: 'u64'. It is not compatible with the other type.
   ·
13 │         let _: &u64 = if (cond) b else u_mut;
   │                       ^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:15:23
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                            ---                                         ---- Found: 'bool'. It is not compatible with the other type.
   │                            │                                            
   │                            Found: 'u64'. It is not compatible with the other type.
   ·
15 │         let _: &u64 = if (cond) u else b_mut;
   │                       ^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:16:23
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                            ---                                         ---- Found: 'bool'. It is not compatible with the other type.
   │                            │                                            
   │                            Found: 'u64'. It is not compatible with the other type.
   ·
16 │         let _: &u64 = if (cond) b_mut else u;
   │                       ^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:19:27
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                                             ---                        ---- Found: 'bool'. It is not compatible with the other type.
   │                                             │                           
   │                                             Found: 'u64'. It is not compatible with the other type.
   ·
19 │         let _: &mut u64 = if (cond) u_mut else b_mut;
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:20:27
   │
 8 │     fun t1(cond: bool, u: &u64, u_mut: &mut u64, b: &bool, b_mut: &mut bool) {
   │                                             ---                        ---- Found: 'bool'. It is not compatible with the other type.
   │                                             │                           
   │                                             Found: 'u64'. It is not compatible with the other type.
   ·
20 │         let _: &mut u64 = if (cond) b_mut else u_mut;
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:25:21
   │
24 │     fun t2(cond: bool, u: &u64, u_mut: &mut u64) {
   │                           ---- Given: '&u64'
25 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u) else (u_mut, u_mut);
   │                     ^^^^^^^^^^^^^^^^^^^^
   │                     ││
   │                     │Expected: '&mut u64'
   │                     Invalid type annotation

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:26:21
   │
24 │     fun t2(cond: bool, u: &u64, u_mut: &mut u64) {
   │                           ---- Given: '&u64'
25 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u) else (u_mut, u_mut);
26 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u_mut, u) else (u, u_mut);
   │                     ^^^^^^^^^^^^^^^^^^^^
   │                     ││
   │                     │Expected: '&mut u64'
   │                     Invalid type annotation

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/if_branches_subtype_invalid.move:27:21
   │
24 │     fun t2(cond: bool, u: &u64, u_mut: &mut u64) {
   │                           ---- Given: '&u64'
   ·
27 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u_mut) else (u_mut, u);
   │                     ^^^^^^^^^^^^^^^^^^^^
   │                     ││
   │                     │Expected: '&mut u64'
   │                     Invalid type annotation

